--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
     "version": "1.0.0",
     "scripts": {
         "start": "node server",
-        "server": "nodemon server"
+        "server": "nodemon server",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "config": "^3.3.3",
         "express": "^4.16.0",
+        "express-validator": "^6.8.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.4"
     },
     "devDependencies": {
+        "concurrently": "^5.1.0",
         "nodemon": "^2.0.2"
     }
 }
