--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "config": "^3.3.3",
+        "dateformat": "^4.3.1",
+        "excel4node": "^1.7.2",
         "express": "^4.16.0",
         "express-validator": "^6.8.0",
+        "i": "^0.3.6",
+        "install": "^0.13.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.4"
+        "mongoose": "^5.9.4",
+        "node-excel-to-json": "0.0.3",
+        "pg": "^8.5.1"
     },
     "devDependencies": {
         "concurrently": "^5.1.0",
